--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
+    "multer": "^1.4.2",
     "pug": "^3.0.0"
   },
   "devDependencies": {
