--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "mongoose": "^5.11.13",
     "morgan": "~1.9.1",
     "multer": "^1.4.2",
-    "pug": "^3.0.0"
+    "pug": "^3.0.0",
+    "socket.io": "^3.1.1"
   },
   "devDependencies": {
     "eslint": "^7.18.0",
