--- a/backend/package.json
+++ b/backend/package.json
@@ -3,8 +3,8 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
-    "start": "node ./bin/www",
-    "devstart": "nodemon ./bin/www",
+    "start": "node ../bin/www",
+    "devstart": "nodemon ../bin/www",
     "serverstart": "DEBUG=odin-book:* npm run devstart"
   },
   "dependencies": {
