--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://snoringarvind.github.io/odinbook-frontend",
   "name": "odin-book",
   "version": "0.0.0",
   "private": true,
