--- a/react-frontend/package.json
+++ b/react-frontend/package.json
@@ -1,4 +1,5 @@
 {
+  "homepage": "https://snoringarvind.github.io/odinbook-frontend/",
   "name": "react-frontend",
   "version": "0.1.0",
   "private": true,
